--- a/Pages/index.html
+++ b/Pages/index.html
@@ -14,9 +14,9 @@
         </tr>
     </table><br>
 
-    <button id="newStorageItemButton" onclick="itemAddForm()">Press to add item to store</button>
+    <button id="newStorageItemAddFormButton" onclick="itemAddForm()">Press to add item to store</button>
     <br>
-    <form id="newStorageItemForm" style="visibility: hidden;">
+    <form id="newStorageItemForm">
         <label for="newNameInput">Item Name</label>
         <input type="text" id="newNameInput">
 
@@ -26,7 +26,7 @@
         <label for="newPriceInput">Item's price</label>
         <input type="text" id="newPriceInput">
 
-        <button type="submit">Add items</button>
+        <button type="submit" id="newStoreItemButton">Add items</button><br>
     </form>
 
 
